--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-evenly;
     padding-bottom: 1em;
-    background-color: blue;
-    color: white;
+    background-color: #0098d3;
+    color: #fcdf71;
     width: 100%;
     height: 50px
 }
