--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -1,10 +1,17 @@
 
+
 .navBar{
     display: flex;
     justify-content: space-evenly;
     padding-top: 2em;
-    background-color: red;
-    color: white;
+    background-color: #0098d3;
     width: 100%;
-    height: 60px
+    height: 60px;
+}
+
+.links{
+    text-decoration: none;
+    color:#fcdf71;
+    font-size: xx-large;
+    font-family: "Work Sans", bold ;
 }
