--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Work Sans');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Tinos&family=Work+Sans&display=swap');
 
 .header{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
+    text-align: center;
     padding-bottom: 1em;
     border: 2px solid;
     border-color: #fcdf71;
-    font-family: "Work Sans", bold ;
+    font-family: 'Playfair Display', serif;
     color: #0098d3;
     width: 100%;
-    height: 150px
+    height: fit-content;
 }
+
