--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -13,5 +13,6 @@
     text-decoration: none;
     color:#fcdf71;
     font-size: xx-large;
-    font-family: "Work Sans", bold ;
+    font-family:'Playfair Display', serif;
 }
+
