--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,9 +1,7 @@
 .footer{
     display: flex;
-    justify-content: space-evenly;
-    padding-bottom: 1em;
-    background-color: #0098d3;
+    /* background-color: #0098d3; */
     color: #fcdf71;
     width: 100%;
-    height: 50px
+    height: fit-content;
 }
