--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,6 +1,6 @@
 .footer{
     display: flex;
-    /* background-color: #0098d3; */
+    background-color: #0098d3;
     color: #fcdf71;
     width: 100%;
     height: fit-content;
