--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -1,5 +1,17 @@
 .greeting{
+    color: #fcdf71;
     line-height: 1.5em;
     font-size: 1.2em;
     font-family: 'Playfair Display', serif;
+    z-index: 1;
+    position: relative;
+}
+
+.indexContainer{
+    position: relative;
+}
+
+.background{
+    z-index: 0;
+    height: 500px;
 }
