--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,7 +1,9 @@
 .footer{
-    display: flex;
-    background-color: #0098d3;
-    color: #fcdf71;
+    display:flex;
+    position: inherit;
+    bottom: 0;
+    color: #89DDff;
+    border: 5px solid #89DDff;
     width: 100%;
     height: fit-content;
 }
