--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -5,9 +5,8 @@
     justify-content: space-evenly;
     text-align: center;
     padding-bottom: 1em;
-    
     font-family: 'Playfair Display', serif;
-    color: #0098d3;
+    color: #89DDff;
     width: 100%;
     height: fit-content;
 }
