--- a/src/css/global.css
+++ b/src/css/global.css
@@ -102,11 +102,11 @@ pre{
 }
 
 .tube {
-    --fill-color: blue;
     --width: 4rem;
     --skew: .5rem;
     --tube-color: #fff;
-    --anim-duration: 3s;
+    --fill-color: black; 
+    --anim-duration: 1s;
     width: var(--width);
     aspect-ratio: 1/4.5;
     margin-top: var(--skew);
@@ -118,6 +118,25 @@ pre{
     grid-template-rows: max-content auto max-content;
     position: relative;
 }
+
+.selected-color {
+    --width: 4rem;
+    --skew: .5rem;
+    --tube-color: #fff;
+    --fill-color: red; 
+    --anim-duration: 1s;
+    width: var(--width);
+    aspect-ratio: 1/4.5;
+    margin-top: var(--skew);
+    border-top-left-radius: 50% var(--skew);
+    border-top-right-radius: 50% var(--skew);
+    border-bottom-left-radius: 50% var(--skew);
+    border-bottom-right-radius: 50% var(--skew);
+    display: grid;
+    grid-template-rows: max-content auto max-content;
+    position: relative;
+}
+
 .tube::before{
     --blur: 4px;
     content: '';
@@ -132,7 +151,7 @@ pre{
     filter: blur(var(--blur));
 }
 
-.tube>.cap{
+.cap{
     --cap-height: calc(var(--width) * .5);
     height: calc(var(--cap-height) + var(--skew));
     border-bottom-left-radius: inherit;
@@ -142,7 +161,9 @@ pre{
     position: relative;
     z-index: 2;
 }
-.tube>.cap::after{
+
+
+.cap::after{
     content: "";
     position: absolute;
     width: 100%;
@@ -153,7 +174,25 @@ pre{
     top: calc(var(--skew) * -1);
 }
 
-.tube>.base{
+.cap-text{
+    width: 100%;
+    color: var(--fill-color);
+    background-color: rgb(0 0 0 / .1);
+    padding-top: calc(var(--skew) + var(--width) * .05);
+    padding-bottom: calc(var(--width) * .1);
+    display: grid;
+    place-content: center;
+    margin-top: calc(var(--skew) * -.5);
+    border-bottom-left-radius: 50% var(--skew);
+    border-bottom-right-radius: 50% var(--skew);
+    --mask-image: radial-gradient( ellipse 100% calc(var(--skew) * 2) at center top, transparent calc(50% - 1px), black calc(50% + 1px));
+    -webkit-mask-image: var(--mask-image);
+    mask-image: var(--mask-image);
+    font-size: x-large;
+    font-style: normal;
+}
+
+.base{
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
     background-color: var(--tube-color);
@@ -168,18 +207,20 @@ pre{
 }
 
 
-.tube>.base>.text{
+.text{
     color: var(--fill-color);
     font-family: sans-serif;
     line-height: 1;
     font-size: calc(var(--width) * .4);
     position: relative;
 }
-.tube>.base>.text > *{
+
+.text > *{
     position: absolute;
     font-size: .5em;
 }
-.tube>.base>.icon{
+
+.icon{
     width: 100%;
     color: var(--fill-color);
     background-color: rgb(0 0 0 / .1);
@@ -193,12 +234,13 @@ pre{
     --mask-image: radial-gradient( ellipse 100% calc(var(--skew) * 2) at center top, transparent calc(50% - 1px), black calc(50% + 1px));
     -webkit-mask-image: var(--mask-image);
     mask-image: var(--mask-image);
-    font-size: calc(var(--width) * .25);
+    font-size: xx-large;
 }
 
-
-.tube>.fill{
+.fill{
     margin-top: calc(var(--skew) * -1);
+    color: white;
+    padding-top: 50%;
     position: relative;
     z-index: 1;
     --glas-gradient:
@@ -213,12 +255,12 @@ pre{
     background-image: var(--glas-gradient);
 }
 
-.tube>.fill::before{
+.fill::before{
     position: absolute;
     content: "";
     width: 100%;
     --fill-start: var(--skew);
-    --fill-end: calc(var(-percent) * 1% + var(--skew));
+    --fill-end: calc(var(--percent) * 1% + var(--skew));
     height: var(--fill-start);
     background-color: var(--fill-color);
     bottom: calc(var(--skew) * -1);
@@ -238,7 +280,7 @@ pre{
   animation: fill-before var(--anim-duration) linear forwards
 }
 
-.tube>.fill::after{
+.fill::after{
     content: "";
     position: absolute;
     width: 100%;
@@ -246,7 +288,7 @@ pre{
     background-color: var(--fill-color);
     border-radius: 50%;
     --fill-start: calc(var(--skew) * -1);
-    --fill-end: calc(var(-percent) * 1% - var(--skew));
+    --fill-end: calc(var(--percent) * 1% - var(--skew));
     bottom: var(--fill-start);
     background-image: 
         var(--glas-gradient),
@@ -257,13 +299,10 @@ pre{
 @keyframes fill-before{ to { height: var(--fill-end)}}
 @keyframes fill-after { to { bottom: var(--fill-end)}}
 
-/* for demo */
-*, *::before, *::after { box-sizing: border-box; padding: 0; margin: 0 }
-
 .tubes {
-  gap: calc(2vw + 0.2rem); /* (320,8)(1920,32) */;
+  gap: calc(2vw + 0.2rem);
 }
 .tube {
-  --width: calc(8vw + 0.6rem); /* (320,24)(1920,96) */;
-  --skew: calc(1vw + 0.1rem); /* (320,4)(1920,16) */;
+  --width: calc(8vw + 0.6rem); 
+  --skew: calc(1vw + 0.1rem);
 }
