--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,23 +6,25 @@ body{
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: bold;
     
 }
 
-.selected{
-    display: none;
-}
+h1,h2,h3 {
+    margin: 0;
+    font-family: 'Playfair Display', serif;
+    /* font-family: 'Fira Sans Condensed', sans-serif; */
+    /* font-family: 'Lato', sans-serif; */
+    }
 
 .background{
     z-index: 0;
     opacity: 40%;
 }
 
-pre{
-    width: 80%;
-    padding: 20px;
+.selected{
+    display: none;
 }
 
 /*******************Navbar******************/
@@ -42,6 +44,38 @@ pre{
     font-size: 1em;
 }
 
+/*******************Button**********************/
+
+.button-grid{
+    background-color: black;
+    color: white;
+    
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.button-box{
+    background-color: black;
+    color: white;
+    width: 15em;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: 5px solid white
+}
+
+.buttonox:hover{
+    border: 5px solid white
+}
+
+.css-11qr2p8-MuiButtonBase-root-MuiButton-root{
+    border-radius: 30px;
+    background-color: white;
+    color: #0d0c22;
+    margin-left: 3px;
+    margin-right: 3px;
+}
 
 /*******************SLIDER******************/
 
@@ -65,30 +99,6 @@ pre{
 
 .css-ofrcno-MuiGrid-root>.MuiGrid-item{
     color: white;
-}
-
-/*******************Button**********************/
-
-.buttonox{
-    background-color: black;
-    color: white;
-    width: 15em;
-    margin: auto;
-    padding: 10px;
-    border-radius: 10px;
-    border: 5px solid white
-}
-
-.buttonox:hover{
-    border: 5px solid white
-}
-
-.css-11qr2p8-MuiButtonBase-root-MuiButton-root{
-    border-radius: 30px;
-    background-color: white;
-    color: #0d0c22;
-    margin-left: 3px;
-    margin-right: 3px;
 }
 
 /*********************Tubes********************/
@@ -312,7 +322,7 @@ pre{
   --skew: calc(1vw + 0.1rem);
 }
 
-/****************Though Bubble********************/
+/****************Thought Bubble********************/
 
 .thought-bubble-container{
     height: 5em;
@@ -321,13 +331,13 @@ pre{
 .thought-bubble {
     position: relative;
     z-index: 1;
-	height: 100%;
-	width: 80%;
+	width: 50%;
 	background: ivory;
 	border-radius: 20px;
-    margin: 0 auto;
-	margin-top: 5px;
-	font-size: 1.6em;
+    margin: 0.5em auto 1.5em auto;
+    font-family: 'Fira Sans Condensed', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+	font-size: 1.15em;
 	text-align: center;
 }
 
