--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,1 +1,2 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Familjen+Grotesk&family=Fira+Sans+Condensed&family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Tinos&family=Work+Sans&display=swap');
