--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,15 +1,17 @@
 
 body{
-    background-color: rgb(246, 230, 230);
-    background-image: url("/images/it.jpg") ;
-    background-size:cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: bold;
-    
+    margin: 0;
 }
+
+.bgWrap {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    z-index: -1;
+  }
 
 h1,h2,h3 {
     margin: 0;
@@ -52,6 +54,22 @@ pre{
     font-size: 1em;
 }
 
+/*******************Top Description**********************/
+
+.top-description {
+    display: flex;
+    height: fit-content;
+    position: relative;
+    z-index: 1;
+	background: #a3a5a6;
+	border-radius: 10px;
+	font-size: 1.15em;
+	text-align: center;
+    width: 60%;
+    margin-top: 9px;
+    padding: 7px;
+}
+
 /*******************Button**********************/
 
 .button-grid{
@@ -67,8 +85,8 @@ pre{
     background-color: black;
     color: white;
     height: fit-content;
-    width: 25%;
     border-radius: 10px;
+    margin-right: 22px;
 }
 
 .css-11qr2p8-MuiButtonBase-root-MuiButton-root{
@@ -79,7 +97,17 @@ pre{
     margin-right: 3px;
 }
 
+.css-1p823my-MuiListItem-root{
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 3.3em;
+}
+
 /*******************SLIDER******************/
+
+.css-1aznpnh-MuiSlider-root{
+    height: 14px;
+}
 
 .css-187mznn-MuiSlider-root{
     height: 20px;
@@ -100,6 +128,10 @@ pre{
 }
 
 .css-ofrcno-MuiGrid-root>.MuiGrid-item{
+    color: white;
+}
+
+.css-1eoe787-MuiSlider-markLabel{
     color: white;
 }
 
@@ -170,26 +202,34 @@ pre{
 .current-element {
     --fill-color: red; 
     --anim-duration: 1s;
-    animation-name: move;
+    animation-name: move-right;
     animation-duration: var(--duration);
 }
 
-@keyframes move {
+@keyframes move-right{
+    100%{top: 20px}
+}
+
+@keyframes move-left{
     100%{top: 20px}
 }
 
 .current-element-text::before{
     content: "arr[i]";  
+    position: relative;
+    top: 4px;
 }
 
 .next-element{
     --fill-color: blue;
-    animation-name: move;
-    animation-duration: var(--duration);
+    animation-name: move-left;
+    animation-duration: var(--duration) ;
 }
 
 .next-element-text::before{
-    content: "arr[i + 1]";  
+    content: "arr[i + 1]"; 
+    position: relative;
+    top: 4px;
 }
 
 .test{
@@ -209,7 +249,7 @@ pre{
 
 
 .cap{
-    --cap-height: calc(var(--width) * .5);
+    --cap-height: calc(var(--width) * .4);
     height: calc(var(--cap-height) + var(--skew));
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
@@ -245,8 +285,8 @@ pre{
     display: grid;
     justify-items: center;
     text-align: center;
-    padding-top: calc(var(--width) * 0.1 + var(--skew));
-    padding-bottom: calc(var(--width) * .1);
+    /* padding-top: calc(var(--width) * 0.1 + var(--skew));
+    padding-bottom: calc(var(--width) * .1); */
     overflow: hidden;
 }
 
@@ -315,6 +355,7 @@ pre{
 .fill::after{
     content: "";
     position: absolute;
+    z-index: -1;
     width: 100%;
     height: calc(var(--skew) * 2);
     background-color: var(--fill-color);
@@ -368,9 +409,9 @@ pre{
     color: #fe8c52;
     z-index: 5;
     position: relative;
-    bottom: 15px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 22px;
     text-align: center;
 }
 
